test/corpus/comment.txt
================================================================================
single line comment
================================================================================

% This is a comment

--------------------------------------------------------------------------------

(source_file
  (comment))

================================================================================
comment after code
================================================================================

foo() -> ok. % inline comment

--------------------------------------------------------------------------------

(source_file
  (fun_decl
    (function_clause
      (atom)
      (expr_args)
      (clause_body
        (atom))))
  (comment))

================================================================================
multiple comments
================================================================================

% First comment
% Second comment
foo() -> ok.

--------------------------------------------------------------------------------

(source_file
  (comment)
  (comment)
  (fun_decl
    (function_clause
      (atom)
      (expr_args)
      (clause_body
        (atom)))))

================================================================================
comment with special characters
================================================================================

% Comment with "quotes" and 'atoms' and $c

--------------------------------------------------------------------------------

(source_file
  (comment))

================================================================================
empty comment
================================================================================

%

--------------------------------------------------------------------------------

(source_file
  (comment))

================================================================================
double percent comment
================================================================================

%% Documentation style comment

--------------------------------------------------------------------------------

(source_file
  (comment))

================================================================================
triple percent comment
================================================================================

%%% Module level comment

--------------------------------------------------------------------------------

(source_file
  (comment))

================================================================================
comment between clauses
================================================================================

foo(0) -> zero;
foo(N) when N > 0 -> positive.
% Comment after function

--------------------------------------------------------------------------------

(source_file
  (fun_decl
    (function_clause
      (atom)
      (expr_args
        (integer))
      (clause_body
        (atom))))
  (fun_decl
    (function_clause
      (atom)
      (expr_args
        (var))
      (guard
        (guard_clause
          (binary_op_expr
            (var)
            (integer))))
      (clause_body
        (atom))))
  (comment))
