test/corpus/expression/call.txt
================================================================================
simple function call
================================================================================

foo().

--------------------------------------------------------------------------------

(source_file
  (call
    (atom)
    (expr_args)))

================================================================================
function call with arguments
================================================================================

foo(1, 2, 3).

--------------------------------------------------------------------------------

(source_file
  (call
    (atom)
    (expr_args
      (integer)
      (integer)
      (integer))))

================================================================================
remote function call
================================================================================

lists:reverse(L).

--------------------------------------------------------------------------------

(source_file
  (call
    (remote
      (remote_module
        (atom))
      (atom))
    (expr_args
      (var))))

================================================================================
remote function call multiple args
================================================================================

string:tokens(Str, ",").

--------------------------------------------------------------------------------

(source_file
  (call
    (remote
      (remote_module
        (atom))
      (atom))
    (expr_args
      (var)
      (string))))

================================================================================
nested function calls
================================================================================

foo(bar(baz(1))).

--------------------------------------------------------------------------------

(source_file
  (call
    (atom)
    (expr_args
      (call
        (atom)
        (expr_args
          (call
            (atom)
            (expr_args
              (integer))))))))

================================================================================
chained remote calls
================================================================================

lists:map(fun double/1, lists:seq(1, 10)).

--------------------------------------------------------------------------------

(source_file
  (call
    (remote
      (remote_module
        (atom))
      (atom))
    (expr_args
      (internal_fun
        (atom)
        (arity
          (integer)))
      (call
        (remote
          (remote_module
            (atom))
          (atom))
        (expr_args
          (integer)
          (integer))))))

================================================================================
function call with expression as function
================================================================================

(foo)().

--------------------------------------------------------------------------------

(source_file
  (call
    (paren_expr
      (atom))
    (expr_args)))

================================================================================
function call with variable function name
================================================================================

(Mod):(Fun)(Args).

--------------------------------------------------------------------------------

(source_file
  (call
    (remote
      (remote_module
        (paren_expr
          (var)))
      (paren_expr
        (var)))
    (expr_args
      (var))))

================================================================================
function call in expression
================================================================================

X = foo() + bar().

--------------------------------------------------------------------------------

(source_file
  (match_expr
    (var)
    (binary_op_expr
      (call
        (atom)
        (expr_args))
      (call
        (atom)
        (expr_args)))))

================================================================================
function call with list argument
================================================================================

length([1, 2, 3]).

--------------------------------------------------------------------------------

(source_file
  (call
    (atom)
    (expr_args
      (list
        (integer)
        (integer)
        (integer)))))

================================================================================
function call with tuple argument
================================================================================

element(1, {a, b, c}).

--------------------------------------------------------------------------------

(source_file
  (call
    (atom)
    (expr_args
      (integer)
      (tuple
        (atom)
        (atom)
        (atom)))))

================================================================================
function call with map argument
================================================================================

maps:get(key, #{key => value}).

--------------------------------------------------------------------------------

(source_file
  (call
    (remote
      (remote_module
        (atom))
      (atom))
    (expr_args
      (atom)
      (map_expr
        (map_field
          (atom)
          (atom))))))

================================================================================
function call with binary argument
================================================================================

byte_size(<<1, 2, 3>>).

--------------------------------------------------------------------------------

(source_file
  (call
    (atom)
    (expr_args
      (binary
        (bin_element
          (integer))
        (bin_element
          (integer))
        (bin_element
          (integer))))))

================================================================================
function call with fun argument
================================================================================

lists:map(fun(X) -> X * 2 end, [1, 2, 3]).

--------------------------------------------------------------------------------

(source_file
  (call
    (remote
      (remote_module
        (atom))
      (atom))
    (expr_args
      (anonymous_fun
        (fun_clause
          (expr_args
            (var))
          (clause_body
            (binary_op_expr
              (var)
              (integer)))))
      (list
        (integer)
        (integer)
        (integer)))))

================================================================================
guard function call
================================================================================

is_integer(X).

--------------------------------------------------------------------------------

(source_file
  (call
    (atom)
    (expr_args
      (var))))

================================================================================
erlang module function call
================================================================================

erlang:self().

--------------------------------------------------------------------------------

(source_file
  (call
    (remote
      (remote_module
        (atom))
      (atom))
    (expr_args)))
